Got the form to be on one row.

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       
       <!-- Form -->
       <section class="row mt-3">
-        <form>
-          <h3>Enter First Year's Name</h3>
-          <div>
-            <label for="student-name" class="form-label">Student </label>
-            <input type="text" placeholder="Gordon Gecko" class="form-control w-50" id="student-name">
-            <button type="submit">Sort</button>
+        <h3>Enter First Year's Name</h3>
+        <form class="container">
+          <div class="row">
+            <label for="student-name" class="form-label col">Student </label>
+            <input type="text" placeholder="Gordon Gecko" class="col form-control" id="student-name">
+            <button type="submit" class="col">Sort</button>
           </div>
         </form>
       </section>
