Added some margin between the columns for the classroom on the x-axis.

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
       
       <!-- classroom -->
       <section class="classroom row mt-5">
-        <div class="classroom-col col">
+        <div class="classroom-col col mx-2">
           <h4>First Year's</h4>
         </div>
-        <div class="classroom-col col">
+        <div class="classroom-col col mx-2">
           <h4>He Who Must Not Be Named's Army</h4>
         </div>
       </section>
