--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
       <section class="classroom row mt-5">
         <div class="classroom-col col mx-2">
           <h4>First Year's</h4>
+          <div id="render-students-here"></div>
         </div>
         <div class="classroom-col col mx-2">
           <h4>He Who Must Not Be Named's Army</h4>
+          <div id="render-expelled-students-here"></div>
         </div>
       </section>
       <!-- ./classroom -->
