Added some margin on the x-axis to each filter button. Increased the width on each card.

--- a/index.html
+++ b/index.html
@@ -34,22 +34,22 @@
 
       <!-- Filter Buttons -->
         <section class="row row-cols-5 mt-5">
-          <button class="cat-filter btn btn-warning btn-sm col">Gryffindor</button>
-          <button class="dog-filter btn btn-danger btn-sm col">Hufflepuff</button>
-          <button class="dino-filter btn btn-info btn-sm col">Ravenclaw</button>
-          <button class="dino-filter btn btn-info btn-sm col">Slytherin</button>
-          <button class="all-filter btn btn-dark btn-sm col">All</button>
+          <button class="cat-filter btn btn-warning btn-sm col mx-1">Gryffindor</button>
+          <button class="dog-filter btn btn-danger btn-sm col mx-1">Hufflepuff</button>
+          <button class="dino-filter btn btn-info btn-sm col mx-1">Ravenclaw</button>
+          <button class="dino-filter btn btn-info btn-sm col mx-1">Slytherin</button>
+          <button class="all-filter btn btn-dark btn-sm col mx-1">All</button>
         </section>
       <!-- ./Filter Buttons -->
       
       <!-- classroom -->
       <section class="classroom row mt-5">
         <div class="classroom-col col mx-2">
-          <h4>First Year's</h4>
+          <h4 class="my-4">First Year's</h4>
           <div id="render-students-here"></div>
         </div>
         <div class="classroom-col col mx-2">
-          <h4>He Who Must Not Be Named's Army</h4>
+          <h4 class="my-4">He Who Must Not Be Named's Army</h4>
           <div id="render-expelled-students-here"></div>
         </div>
       </section>
