Got student filters to work.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <button class="hufflepuff-filter btn btn-danger btn-sm col mx-1">Hufflepuff</button>
           <button class="ravenclaw-filter btn btn-info btn-sm col mx-1">Ravenclaw</button>
           <button class="slytherin-filter btn btn-info btn-sm col mx-1">Slytherin</button>
-          <button class="all-filter btn btn-dark btn-sm col mx-1">All</button>
+          <button class="clear-filter btn btn-dark btn-sm col mx-1">All</button>
         </section>
       <!-- ./Filter Buttons -->
       
