--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h4 class="my-4">First Year's</h4>
           <div id="render-students-here"></div>
         </div>
-        <div class="classroom-col col mx-2">
+        <div class="expelled-classroom-col col mx-2">
           <h4 class="my-4">He Who Must Not Be Named's Army</h4>
           <div id="render-expelled-students-here"></div>
         </div>
