Made the form input required.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <form class="container">
           <div class="row">
             <label for="student-name" class="form-label col">Student </label>
-            <input type="text" placeholder="Gordon Gecko" class="col form-control" id="student-name">
+            <input type="text" placeholder="Gordon Gecko" class="col form-control" id="student-name" required>
             <button type="submit" class="col">Sort</button>
           </div>
         </form>
