Got the filter buttons to center on the page by using justify-content:center. Still working on getting the form elements to stay on one line and take up a certain amount of space.

--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
       <!-- ./HEADER -->
       
       <!-- Form -->
-      <section class="row mt-3">
-        <h3>Enter First Year's Name</h3>
-        <form class="container">
-          <div class="row">
-            <label for="student-name" class="form-label col">Student </label>
-            <input type="text" placeholder="Gordon Gecko" class="col form-control" id="student-name" required>
-            <button type="submit" class="col">Sort</button>
+      <section class="row">
+        <h3 class="mt-2">Enter First Year's Name</h3>
+        <form>
+          <div class="form-elements row mt-2">
+            <label for="student-name" class="form-label">Student </label>
+            <input type="text" placeholder="Gordon Gecko" class="form-control" id="student-name" required>
+            <button type="submit">Sort</button>
           </div>
         </form>
       </section>
       <!-- ./Form -->
 
       <!-- Filter Buttons -->
-        <section class="row row-cols-5 mt-5">
-          <button class="gryffindor-filter btn btn-warning btn-sm col mx-1">Gryffindor</button>
-          <button class="hufflepuff-filter btn btn-danger btn-sm col mx-1">Hufflepuff</button>
-          <button class="ravenclaw-filter btn btn-info btn-sm col mx-1">Ravenclaw</button>
-          <button class="slytherin-filter btn btn-info btn-sm col mx-1">Slytherin</button>
-          <button class="clear-filter btn btn-dark btn-sm col mx-1">All</button>
+        <section class="filter-buttons row row-cols-5 mt-5">
+          <button class="gryffindor-filter btn btn-warning btn-sm mx-1">Gryffindor</button>
+          <button class="hufflepuff-filter btn btn-danger btn-sm mx-1">Hufflepuff</button>
+          <button class="ravenclaw-filter btn btn-info btn-sm mx-1">Ravenclaw</button>
+          <button class="slytherin-filter btn btn-info btn-sm mx-1">Slytherin</button>
+          <button class="clear-filter btn btn-dark btn-sm mx-1">All</button>
         </section>
       <!-- ./Filter Buttons -->
       
