Got the student cards and the expelled cards to be centered.

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
       <section class="classroom row mt-5">
         <div class="classroom-col col mx-2">
           <h4 class="my-4">First Year's</h4>
-          <div id="render-students-here"></div>
+          <div class="render-students-here"></div>
         </div>
         <div class="expelled-classroom-col col mx-2">
           <h4 class="my-4">He Who Must Not Be Named's Army</h4>
-          <div id="render-expelled-students-here"></div>
+          <div class="render-expelled-students-here"></div>
         </div>
       </section>
       <!-- ./classroom -->
