--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
         <h3 class="mt-2">Enter First Year's Name</h3>
         <form>
           <div class="form-elements row mt-2">
-            <label for="student-name" class="form-label">Student </label>
-            <input type="text" placeholder="Gordon Gecko" class="form-control" id="student-name" required>
-            <button type="submit">Sort</button>
+            <div class="col-3">
+              <label for="student-name" class="form-label">Student </label>
+            </div>
+            <div class="col-6">
+              <input type="text" placeholder="Gordon Gecko" class="form-control" id="student-name" required>
+            </div>
+            <div class="col-3">
+              <button type="submit">Sort</button>
+            </div>
           </div>
         </form>
       </section>
