--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <input type="text" placeholder="Gordon Gecko" class="form-control" id="student-name" required>
             </div>
             <div class="col-3">
-              <button type="submit">Sort</button>
+              <button type="submit" class="btn btn-primary btn-sm">Sort</button>
             </div>
           </div>
         </form>
