--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body>
   <div id="app">
 
-    <div class="container text-center">
+    <div class="container-fluid text-center">
       <!-- HEADER -->
-      <section class="row mt-5">
+      <section class="row mt-3">
         <h1 class="mb-3">Welcome to Sorting Hat</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex impedit itaque error accusantium hic excepturi voluptatum facere ad.</p>
         <p>Instructions: dolorum odio nam impedit ex corrupti dolores provident minus voluptate expedita.</p>
@@ -56,7 +56,7 @@
       <!-- ./Filter Buttons -->
       
       <!-- classroom -->
-      <section class="classroom row mt-5">
+      <section class="classroom row mt-5 mx-5">
         <div class="classroom-col col mx-2">
           <h4 class="my-4">First Year's</h4>
           <div class="render-students-here"></div>
