--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="container-fluid text-center">
       <!-- HEADER -->
-      <section class="row mt-3">
+      <section class="header row mt-3">
         <h1 class="mb-3">Welcome to Sorting Hat</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex impedit itaque error accusantium hic excepturi voluptatum facere ad.</p>
         <p>Instructions: dolorum odio nam impedit ex corrupti dolores provident minus voluptate expedita.</p>
@@ -27,7 +27,7 @@
       <!-- ./HEADER -->
       
       <!-- Form -->
-      <section class="row">
+      <section class="form-row row">
         <h3 class="mt-2">Enter First Year's Name</h3>
         <form>
           <div class="form-elements row mt-2">
@@ -56,13 +56,13 @@
       <!-- ./Filter Buttons -->
       
       <!-- classroom -->
-      <section class="classroom row mt-5 mx-5">
+      <section class="classroom row mt-5 mx-1">
         <div class="classroom-col col mx-2">
-          <h4 class="my-4">First Year's</h4>
+          <h3 class="my-4">First Year's</h4>
           <div class="render-students-here"></div>
         </div>
         <div class="expelled-classroom-col col mx-2">
-          <h4 class="my-4">He Who Must Not Be Named's Army</h4>
+          <h3 class="my-4">He Who Must Not Be Named's Army</h4>
           <div class="render-expelled-students-here"></div>
         </div>
       </section>
