--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
       
       <!-- Form -->
       <section class="form-row row">
-        <h3 class="mt-2">Enter First Year's Name</h3>
+        <h3 class="form-instructions mt-2">Enter First Year's Name</h3>
         <form>
           <div class="form-elements row mt-2">
-            <div class="col-3">
+            <div class="col-2">
               <label for="student-name" class="form-label">Student </label>
             </div>
-            <div class="col-6">
+            <div class="col-7">
               <input type="text" placeholder="Gordon Gecko" class="form-control" id="student-name" required>
             </div>
             <div class="col-3">
